[package]
authors = ["KENTARO OKUDA <lonesometraveler@mac.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f4xx-examples"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f429"] # replace the model of your microcontroller here

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f4xx-examples"
test = false
bench = false

[profile.dev]
codegen-units = 1
panic         = "abort"
incremental   = false
debug         = true
lto           = true
opt-level     = 0

[profile.release]
codegen-units = 1
panic         = "abort"
incremental   = false
debug         = true
lto           = true
opt-level     = 's'
